<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mad.inclass2a.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextLength1"
        android:hint="@string/enter_length"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLength2"
        android:hint="@string/enter_length"
        android:layout_below="@+id/editTextLength1"
        android:layout_alignLeft="@+id/editTextLength1"
        android:layout_alignStart="@+id/editTextLength1"
        android:layout_alignRight="@+id/editTextLength1"
        android:layout_alignEnd="@+id/editTextLength1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/area"
        android:id="@+id/txtArea"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/length_one"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editTextLength1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/length_two"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/editTextLength2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/triangle_area"
        android:id="@+id/btnTriangleArea"
        android:layout_above="@+id/btnSquareArea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/square_area"
        android:id="@+id/btnSquareArea"
        android:layout_above="@+id/btnCircleArea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/circle_area"
        android:id="@+id/btnCircleArea"
        android:layout_above="@+id/btnRectangleArea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rectangle_area"
        android:id="@+id/btnRectangleArea"
        android:layout_above="@+id/btnClearAll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCalculate"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:id="@+id/btnClearAll"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:onClick="onClickCalculate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtAreaValue"
        android:layout_alignTop="@+id/txtArea"
        android:layout_alignLeft="@+id/editTextLength2"
        android:layout_alignStart="@+id/editTextLength2"
        android:layout_alignRight="@+id/editTextLength2"
        android:layout_alignEnd="@+id/editTextLength2" />
</RelativeLayout>
